--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/New Avatar.jpg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/Final Avatar.jpg" alt="" /></a>
 					<h1><strong>Alana Hassett</strong>, a Writing and Digital Media <br> Student at Virginia Tech<br />
 					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
 				</div>
