Fixed the header fo real

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/Final Avatar.jpg" alt="" /></a>
-					<h1><strong>Alana Hassett</strong><br>, <br> A Writing and Digital Media <br> Student at Virginia Tech<br /> </h1>
+					<h1><strong>Alana Hassett, </strong><br> A Writing and Digital Media Student <br> at Virginia Tech </h1>
 					<h3><em> crafted by <a href="http://html5up.net">HTML5 UP</a>.</em></h3>
 				</div>
 			</header>
