--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>Are you interested in getting involved in the arts at Virginia Tech?</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>For our group project, 'Artoholics Anonymous' decided to put together some information about how to get involved in different art groups and organizations at VT.
+							If you're looking to learn about WUVT, The Marching Virginians, Intro Creative Writing, Intro to Cinema, and YouTube vlogging, then you've come to the right place!
+							Below, you'll find my personal blog posts as well as the podcast and video we created as a group. </p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
