--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="6u 12u$(xsmall) work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+								<a href="images/fulls/CinemaBig.jpg" class="image fit thumb"><img src="images/thumbs/CinemaBig.jpg" alt="" /></a>
 								<h3>Intro to Cinema</h3>
 								<p>Learn everything from the foundations of film noir to the cinematic genius that is Wall-E. </p>
 							</article>
