Fixed cinema and added CW

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 								<p>Learn everything from the foundations of film noir to the cinematic genius that is Wall-E. </p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
+								<a href="images/fulls/CW.jpg" class="image fit thumb"><img src="images/thumbs/CW.jpg" alt="" /></a>
 								<h3>Intro to Creative Writing</h3>
 								<p>Why both creative and scientific people enjoy it. </p>
 							</article>
