--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
 								<p>Why both creative and scientific people enjoy it. </p>
 							</article>
 							<article class="6u 12u$(xsmall) work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
+								<a href="images/fulls/Marching Band.jpg" class="image fit thumb"><img src="images/thumbs/Marching Band.jpg" alt="" /></a>
 								<h3>The Marching Virginians</h3>
 								<p>Why <em>YOU</em> should consider auditioning.</p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
+								<a href="images/fulls/Sorority.jpg" class="image fit thumb"><img src="images/thumbs/Sorority.jpg" alt="" /></a>
 								<h3> My Experience in a Service Sorority</h3>
 								<p>You don't need to go through Panhellenic rush week to find a group of girls like you.</p>
 							</article>
 							<article class="6u 12u$(xsmall) work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
+								<a href="images/fulls/WUVT.jpg" class="image fit thumb"><img src="images/thumbs/WUVT.jpg" alt="" /></a>
 								<h3>WUVT: Virginia Tech Radio </h3>
 								<p>Learn about the radio scene at Virginia Tech from the kids who love it. </p>
 							</article>
