Fix picssss more

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 								<p>Why <em>YOU</em> should consider auditioning.</p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="images/fulls/Sorority.jpg" class="image fit thumb"><img src="images/thumbs/Sorority.jpg" alt="" /></a>
+								<a href="images/fulls/Sorority2.jpg" class="image fit thumb"><img src="images/thumbs/Sorority2.jpg" alt="" /></a>
 								<h3> My Experience in a Service Sorority</h3>
 								<p>You don't need to go through Panhellenic rush week to find a group of girls like you.</p>
 							</article>
@@ -70,7 +70,7 @@
 								<p>Learn about the radio scene at Virginia Tech from the kids who love it. </p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
+								<a href="images/fulls/Vlog.jpg" class="image fit thumb"><img src="images/thumbs/Vlog.jpg" alt="" /></a>
 								<h3>Our Vlogging Experience</h3>
 								<p>What we each learned from trying our hand at 21st century blogging. </p>
 							</article>
