--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 								<p>Learn about the radio scene at Virginia Tech from the kids who love it. </p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="images/fulls/Vlog.jpg" class="image fit thumb"><img src="images/thumbs/Vlog.jpg" alt="" /></a>
+								<a href="images/fulls/Vlog.png" class="image fit thumb"><img src="images/thumbs/Vlog.png" alt="" /></a>
 								<h3>Our Vlogging Experience</h3>
 								<p>What we each learned from trying our hand at 21st century blogging. </p>
 							</article>
