linked to podcast and vid

--- a/index.html
+++ b/index.html
@@ -66,12 +66,14 @@
 							</article>
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/fulls/WUVT.jpg" class="image fit thumb"><img src="images/thumbs/WUVT.jpg" alt="" /></a>
-								<h3>WUVT: Virginia Tech Radio </h3>
+								<a href="https://soundcloud.com/ltkasanova/artoholics-anonymous-podcast-episode-1-wuvt">
+								<h3>WUVT: Virginia Tech Radio </h3></a>
 								<p>Learn about the radio scene at Virginia Tech from the kids who love it. </p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/fulls/Vlog.png" class="image fit thumb"><img src="images/thumbs/Vlog.png" alt="" /></a>
-								<h3>Our Vlogging Experience</h3>
+								<a href="https://www.youtube.com/watch?v=Hjv0x9_s9ks&feature=youtu.be">
+								<h3>Our Vlogging Experience</h3></a>
 								<p>What we each learned from trying our hand at 21st century blogging. </p>
 							</article>
 						</div>
