made the pics not links

--- a/index.html
+++ b/index.html
@@ -45,33 +45,33 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="6u 12u$(xsmall) work-item">
-								<a href="images/fulls/CinemaBig.jpg" class="image fit thumb"><img src="images/thumbs/CinemaBig.jpg" alt="" /></a>
+								<div href="images/fulls/CinemaBig.jpg" class="image fit thumb"><img src="images/thumbs/CinemaBig.jpg" alt="" /></div>
 								<h3>Intro to Cinema</h3>
 								<p>Learn everything from the foundations of film noir to the cinematic genius that is Wall-E. </p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="images/fulls/CW.jpg" class="image fit thumb"><img src="images/thumbs/CW.jpg" alt="" /></a>
+								<div href="images/fulls/CW.jpg" class="image fit thumb"><img src="images/thumbs/CW.jpg" alt="" /></div>
 								<h3>Intro to Creative Writing</h3>
 								<p>Why both creative and scientific people enjoy it. </p>
 							</article>
 							<article class="6u 12u$(xsmall) work-item">
-								<a href="images/fulls/Marching Band.jpg" class="image fit thumb"><img src="images/thumbs/Marching Band.jpg" alt="" /></a>
+								<div href="images/fulls/Marching Band.jpg" class="image fit thumb"><img src="images/thumbs/Marching Band.jpg" alt="" /></div>
 								<h3>The Marching Virginians</h3>
 								<p>Why <em>YOU</em> should consider auditioning.</p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="images/fulls/Sorority2.jpg" class="image fit thumb"><img src="images/thumbs/Sorority2.jpg" alt="" /></a>
+								<div href="images/fulls/Sorority2.jpg" class="image fit thumb"><img src="images/thumbs/Sorority2.jpg" alt="" /></div>
 								<h3> My Experience in a Service Sorority</h3>
 								<p>You don't need to go through Panhellenic rush week to find a group of girls like you.</p>
 							</article>
 							<article class="6u 12u$(xsmall) work-item">
-								<a href="images/fulls/WUVT.jpg" class="image fit thumb"><img src="images/thumbs/WUVT.jpg" alt="" /></a>
+								<div href="images/fulls/WUVT.jpg" class="image fit thumb"><img src="images/thumbs/WUVT.jpg" alt="" /></div>
 								<a href="https://soundcloud.com/ltkasanova/artoholics-anonymous-podcast-episode-1-wuvt">
 								<h3>WUVT: Virginia Tech Radio </h3></a>
 								<p>Learn about the radio scene at Virginia Tech from the kids who love it. </p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="images/fulls/Vlog.png" class="image fit thumb"><img src="images/thumbs/Vlog.png" alt="" /></a>
+								<div href="images/fulls/Vlog.png" class="image fit thumb"><img src="images/thumbs/Vlog.png" alt="" /></div>
 								<a href="https://www.youtube.com/watch?v=Hjv0x9_s9ks&feature=youtu.be">
 								<h3>Our Vlogging Experience</h3></a>
 								<p>What we each learned from trying our hand at 21st century blogging. </p>
