added cinema link

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 						<div class="row">
 							<article class="6u 12u$(xsmall) work-item">
 								<div href="images/fulls/CinemaBig.jpg" class="image fit thumb"><img src="images/thumbs/CinemaBig.jpg" alt="" /></div>
-								<h3>Intro to Cinema</h3>
+								<a href=https://medium.com/@alanahassett/introduction-to-cinema-4a1003f796ba>
+								<h3>Intro to Cinema</h3></a>
 								<p>Learn everything from the foundations of film noir to the cinematic genius that is Wall-E. </p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
