--- a/index.html
+++ b/index.html
@@ -52,16 +52,19 @@
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
 								<div href="images/fulls/CW.jpg" class="image fit thumb"><img src="images/thumbs/CW.jpg" alt="" /></div>
-								<h3>Intro to Creative Writing</h3>
+								<a href="https://medium.com/@alanahassett/introduction-to-creative-writing-c09b9988cda8">
+								<h3>Intro to Creative Writing</h3></a>
 								<p>Why both creative and scientific people enjoy it. </p>
 							</article>
 							<article class="6u 12u$(xsmall) work-item">
 								<div href="images/fulls/Marching Band.jpg" class="image fit thumb"><img src="images/thumbs/Marching Band.jpg" alt="" /></div>
-								<h3>The Marching Virginians</h3>
+								<a href="https://medium.com/@alanahassett/why-you-should-join-the-marching-virginians-813f4739251d>
+								<h3>The Marching Virginians</h3></a>
 								<p>Why <em>YOU</em> should consider auditioning.</p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
 								<div href="images/fulls/Sorority2.jpg" class="image fit thumb"><img src="images/thumbs/Sorority2.jpg" alt="" /></div>
+								<a href="https://medium.com/@alanahassett/greek-life-928b6206c613">
 								<h3> My Experience in a Service Sorority</h3>
 								<p>You don't need to go through Panhellenic rush week to find a group of girls like you.</p>
 							</article>
