linked to profile

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							If you're looking to learn about WUVT, The Marching Virginians, Intro Creative Writing, Intro to Cinema, and YouTube vlogging, then you've come to the right place!
 							Below, you'll find my personal blog posts as well as the podcast and video we created as a group. </p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="https://medium.com/@alanahassett" class="button">Learn More</a></li>
 						</ul>
 					</section>
 
