--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							<article class="6u$ 12u$(xsmall) work-item">
 								<div href="images/fulls/Sorority2.jpg" class="image fit thumb"><img src="images/thumbs/Sorority2.jpg" alt="" /></div>
 								<a href="https://medium.com/@alanahassett/greek-life-928b6206c613">
-								<h3> My Experience in a Service Sorority</h3>
+								<h3> My Experience in a Service Sorority</h3></a>
 								<p>You don't need to go through Panhellenic rush week to find a group of girls like you.</p>
 							</article>
 							<article class="6u 12u$(xsmall) work-item">
