added quote mark :/

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							</article>
 							<article class="6u 12u$(xsmall) work-item">
 								<div href="images/fulls/Marching Band.jpg" class="image fit thumb"><img src="images/thumbs/Marching Band.jpg" alt="" /></div>
-								<a href="https://medium.com/@alanahassett/why-you-should-join-the-marching-virginians-813f4739251d>
+								<a href="https://medium.com/@alanahassett/why-you-should-join-the-marching-virginians-813f4739251d">
 								<h3>The Marching Virginians</h3></a>
 								<p>Why <em>YOU</em> should consider auditioning.</p>
 							</article>
